# platform.core.connectivity.smartcard-service

./: AUTHOR  CMakeLists.txt  smartcard-service-server.manifest
client/: CMakeLists.txt  ClientChannel.cpp  ClientDispatcher.cpp  ClientGDBus.cpp  ClientIPC.cpp  Reader.cpp  SEService.cpp  Session.cpp  smartcard-service.pc  smartcard-service.pc.in
client/include/: ClientChannel.h  ClientDispatcher.h  ClientGDBus.h  ClientIPC.h  Reader.h  SEService.h  SEServiceListener.h  Session.h  smartcard-service.h
common/: APDUHelper.cpp  AccessCondition.cpp  AccessControlList.cpp  ByteArray.cpp  CMakeLists.txt  DispatcherHelper.cpp  EFDIR.cpp  Exception.cpp  FCI.cpp  FileObject.cpp  GDBusHelper.cpp  GPACE.cpp  GPARAACL.cpp  GPARAM.cpp  GPARFACL.cpp  GPSEACL.cpp  IPCHelper.cpp  ISO7816BERTLV.cpp  Message.cpp  NumberStream.cpp  OpensslHelper.cpp  PKCS15.cpp  PKCS15CDF.cpp  PKCS15DODF.cpp  PKCS15ODF.cpp  PKCS15OID.cpp  PKCS15Object.cpp  PKCS15Path.cpp  PKCS15TokenInfo.cpp  ProviderHelper.cpp  ReaderHelper.cpp  Record.cpp  SEServiceHelper.cpp  Serializable.cpp  SessionHelper.cpp  SignatureHelper.cpp  SimpleTLV.cpp  Synchronous.cpp  TLVHelper.cpp  smartcard-service-common.pc  (+3 more)
common/include/: APDUHelper.h  AccessCondition.h  AccessControlList.h  ByteArray.h  Channel.h  Debug.h  DispatcherHelper.h  DispatcherMsg.h  EFDIR.h  Exception.h  FCI.h  FileObject.h  GDBusHelper.h  GPACE.h  GPARAACL.h  GPARAM.h  GPARFACL.h  GPSEACL.h  IPCHelper.h  ISO7816BERTLV.h  Lock.h  Message.h  NumberStream.h  OpensslHelper.h  PKCS15.h  PKCS15CDF.h  PKCS15DODF.h  PKCS15ODF.h  PKCS15OID.h  PKCS15Object.h  PKCS15Path.h  PKCS15TokenInfo.h  ProviderHelper.h  ReaderHelper.h  Record.h  SEServiceHelper.h  Serializable.h  SessionHelper.h  SignatureHelper.h  SimpleTLV.h  (+5 more)
debian/: changelog  control  rules  smartcard-service-common-dev.install  smartcard-service-common.install  smartcard-service-dev.install  smartcard-service-server.install  smartcard-service.install
packaging/: org.tizen.SmartcardService.conf  smartcard-service-server.init  smartcard-service.changes  smartcard-service.spec
server/: CMakeLists.txt  ClientInstance.cpp  ServerChannel.cpp  ServerDispatcher.cpp  ServerGDBus.cpp  ServerIPC.cpp  ServerReader.cpp  ServerResource.cpp  ServerSEService.cpp  ServerSession.cpp  ServiceInstance.cpp  org.tizen.SmartcardService.service  org.tizen.smartcard_service.service  smartcard-daemon.cpp  smartcard-service-server.xml  smartcard-service.service
server/include/: ClientInstance.h  ServerChannel.h  ServerDispatcher.h  ServerGDBus.h  ServerIPC.h  ServerReader.h  ServerResource.h  ServerSEService.h  ServerSession.h  ServiceInstance.h  SmartcardDbus.h  smartcard-daemon.h
server/private/: AccessControl.cpp  PKCS15CDFACL.cpp  PKCS15CDFACL.h  access-control-gdbus.xml
test-client/: CMakeLists.txt  test-client-sync.cpp  test-client.cpp
